<?xml version="1.0"?>
<package format="2">
  <name>phasespace_ros</name>

  <version>0.0.1</version>

  <description>PhaseSpace Motion Capture System</description>

  <maintainer email="gregd@phasespace.com">Gregory D'Andrea</maintainer>
  <maintainer email="davidgogh96@gmail.com.com">Yuxiang Gao</maintainer>

  <license>BSD</license>

  <author>Gregory D'Andrea</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <build_depend>pkg-config</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  
  <exec_depend>pkg-config</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

  <export></export>
</package>
